Fixed scrolling (unable to scroll to see cli when the display is too small before) and removed ellipsis

--- a/frontend/src/components/viewTemplateModalComponent/viewTemplateModalComponent.css
+++ b/frontend/src/components/viewTemplateModalComponent/viewTemplateModalComponent.css
@@ -1,6 +1,6 @@
 .modal-dialog.modal-dialog-scrollable{
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
     margin-top: 0;
     margin-bottom: 0;
     float: right;
@@ -11,7 +11,6 @@
 }
 
 .modal-dialog-scrollable #body.modal-body {
-    overflow-y: hidden;
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
@@ -72,7 +71,6 @@
     height: auto;
     overflow: hidden;
     white-space: nowrap;
-    text-overflow:ellipsis;
 }
 
 .send-button {
@@ -168,7 +166,7 @@ div.dynamicParameters:empty ~ div.tab-content div.cli-div {
     flex-direction: column;
     width: 100%;
     max-height: 40vh;
-    padding: 10px 0 80px 0;
+    padding: 10px 0 10px 0;
     overflow: auto;
 }
 
